# sidekick

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  STATUS.md  alembic.ini  docker-compose.yml  local_news_pipeline.mmd  local_news_pipeline_v3.mmd  pyproject.toml  pyrightconfig.json
admin/: .env.example  .gitignore  README.md  package-lock.json  package.json
admin/src/: App.css  App.tsx  CallbackPage.tsx  LogoutPage.tsx  index.css
admin/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
admin/src/components/: AppShell.tsx  AuthGuard.tsx
admin/src/css/: badges.css  dialog.css  form.css  layout.css  table.css  toast.css
admin/src/hooks/: useFilter.ts  useForm.ts  useResource.ts  useToast.ts
admin/src/lib/: api.ts  auth.ts
admin/src/tabs/: AgentConfigsTab.tsx  ApiClientsTab.tsx  ArtifactsTab.tsx  AssignmentsTab.tsx  SourcesTab.tsx
docs/: AGENTS.md  AGENT_CONFIG.md  AGENT_DESIGN_PATTERNS.md  API_AUTH.md  ARTIFACT_STORE.md  ASSIGNMENTS.md  CHUNKING_PROPOSAL.md  IMPLEMENTATION_PLAN.md  SIDEKICK_CMS.md  SOURCE_STRATEGIES.md
docs/templates/: AGENT_README_TEMPLATE.md
handbooks/: Handbook-of-Independent-Journalism_Handbook-Series_English_Lo-Res.txt  Intro-to-Journalism-MDowning-20240425-1.txt  The-Data-Journalism-Handbook-1.txt
infrastructure/environments/production/: .terraform.lock.hcl  main.tf  secrets.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/api/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/cognito/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/modules/newsroom/: README.md  batch.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  s3.tf  step_functions.tf  variables.tf
landing/: README.md  index.html  package-lock.json  package.json
landing/src/: main.js  style.css
migrations/: env.py  pyproject.toml
migrations/src/migrations/: env.py
migrations/src/migrations/versions/: 001_initial_schema.py  002_agent_configs.py  003_api_clients.py  004_artifact_processing_profile.py  005_analysis_scopes.py  006_story_candidates.py
migrations/versions/: 001_initial_schema.py  002_agent_configs.py
scripts/: connect_db.sh  generate-sdk.sh  seed_agent_configs.py  sfn-run.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/sidekick/api/: __init__.py  auth.py  cli.py  db.py  main.py  schemas.py  settings.py
services/api/src/sidekick/api/routers/: agent_configs.py  api_clients.py  artifacts.py  assignments.py  sources.py
services/api/tests/unit/: test_api_routes.py  test_auth.py
services/beat/: Dockerfile  pyproject.toml
services/beat/src/sidekick/beat/: __init__.py  agent.py  cli.py  runtime.py  scope.py  seed_configs.py  tools.py  utils.py
services/beat/tests/unit/: test_tools.py
services/editor/: Dockerfile  pyproject.toml
services/editor/src/sidekick/editor/: __init__.py  agent.py  cli.py  runtime.py  seed_configs.py  tools.py  utils.py
services/editor/tests/unit/: test_tools.py
services/ingestion/: Dockerfile  SPIDERS.md  pyproject.toml
services/ingestion/src/sidekick/: cli.py  runtime.py  seed_configs.py
services/ingestion/src/sidekick/agents/: utils.py
services/ingestion/src/sidekick/agents/examination/: README.md  examination.py
services/ingestion/src/sidekick/agents/ingestion/: README.md
services/ingestion/src/sidekick/agents/tools/: __init__.py  http.py
services/ingestion/src/sidekick/spiders/: __init__.py  _base.py  _context.py  _discovery.py  _format_registry.py  _middleware.py  _pipeline.py  _runner.py  _scaffold.py  city_council_san_bernardino_ca_agendas.py  sync.py
services/ingestion/src/sidekick/spiders/us/ca/san_bernardino/san_bernardino/: city_council_videos.py
services/ingestion/src/sidekick/spiders/us/ca/shasta/: assessment_appeals_board_meetings.py  board_of_supervisors_meetings.py  pollution_control_board_meetings.py
services/ingestion/src/sidekick/spiders/us/ca/shasta/redding/: city_council_meetings.py  city_news.py  planning_commission_meetings.py
services/ingestion/tests/unit/: test_examination.py  test_fetch_url.py  test_ingestion.py
services/processing/: Dockerfile  README.md  pyproject.toml
services/processing/src/sidekick/processing/: __init__.py  cli.py  router.py  runtime.py  seed_configs.py
services/processing/src/sidekick/processing/acquisition/: __init__.py  hls.py
services/processing/src/sidekick/processing/processors/: __init__.py  entity_extract.py  pdf.py  schemas.py  summary.py  transcript.py  utils.py
services/processing/tests/unit/: test_entity_extract.py  test_hls_acquire.py  test_pdf_process.py  test_router.py  test_summary.py  test_transcript.py
services/transcription/: Dockerfile  README.md  preload_whisperx.py  pyproject.toml
services/transcription/src/sidekick/transcription/: __init__.py  cli.py  processor.py  router.py  runtime.py
services/transcription/tests/unit/: test_transcript.py
sidekick-cms/: README.md  drizzle.config.ts  package-lock.json  package.json
sidekick-cms/drizzle/: 0000_confused_dracula.sql
sidekick-cms/drizzle/meta/: 0000_snapshot.json  _journal.json
sidekick-cms/src/: middleware.ts
sidekick-cms/src/app/: layout.tsx
sidekick-cms/src/db/: index.ts
sidekick-cms/src/lib/: auth.ts  cms-geo.ts  geo.ts  pipeline.ts  server-session.ts  slug.ts
skills/attribution-and-quoting/: SKILL.md
skills/contextualization-and-significance/: SKILL.md
skills/cross-domain-pattern-recognition/: SKILL.md
skills/document-assessment/: SKILL.md
skills/editorial-judgment/: SKILL.md
skills/entity-and-actor-tracking/: SKILL.md
skills/ethics-and-fairness/: SKILL.md
skills/government-proceedings/: SKILL.md
skills/investigative-methodology/: SKILL.md
skills/news-values/: SKILL.md
skills/news-values/references/: news-values-framework.md
skills/numbers-and-data-literacy/: SKILL.md
skills/public-finance/: SKILL.md
skills/public-records-and-foia/: SKILL.md
skills/source-assessment/: SKILL.md
skills/story-structure/: SKILL.md
skills/verification/: SKILL.md
(+57 files in other folders)
