[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick-migrations"
version = "0.1.0"
description = "Alembic migrations for the Sidekick pipeline"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "sidekick-core",
]

[tool.uv.sources]
sidekick-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/migrations"]
