[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick-ingestion"
version = "0.1.0"
description = "Source examination and ingestion worker agents"
requires-python = ">=3.12"
dependencies = [
    "sidekick-core",
    "sidekick-api-client",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "deepagents>=0.4.11",
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "playwright>=1.50",
    "langchain>=1.0",
    "langchain-core>=1.2.20",
    "langchain-openai",
    "typer>=0.24.1",
    "boto3>=1.34",
]

[tool.uv.sources]
sidekick-core = { workspace = true }
sidekick-api-client = { workspace = true }

[project.scripts]
sidekick = "sidekick.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sidekick"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
