[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick-transcription"
version = "0.1.0"
description = "Speech-to-text workers — raw audio/video to document-text (WhisperX)"
# Torch does not support 3.14 yet; keep this service on the 3.13 line.
requires-python = ">=3.13,<3.14"
dependencies = [
    "sidekick-core",
    "typer>=0.24.1",
    "python-dotenv>=1.0",
    # Direct pin: whisperx → transformers → sklearn needs a complete scipy wheel
    # (broken/partial scipy installs raise ModuleNotFoundError: scipy.optimize._milp).
    "scipy>=1.14",
    "torch~=2.8",
    "torchcodec==0.7",
    "whisperx>=3.8.4",
]

[project.scripts]
sidekick-transcribe = "sidekick.transcription.cli:main"

[tool.uv.sources]
sidekick-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/sidekick"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
